package Chapter22.drawer;

public interface Drawable {
    public abstract void draw(int x, int y);
}
